--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -38,4 +38,4 @@ jobs:
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
       run: |
-        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME" -o "$RESOURSE_ID"
+        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
