--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -37,5 +37,6 @@ jobs:
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
+        IBM_ORG: ${{ secrets.IBM_ORG }} 
       run: |
-        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
+        ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME" -o "$IBM_ORG"
