--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 20 * * *'
+    - cron: '1 1 1 1 *'
 
 jobs:
   ibm-cloud-restart:
